# zltrouter

./: .env.example  .gitignore  LICENSE  README.md  install.sh  pyproject.toml  service.sh
.github/workflows/: tests.yml
tests/: router_mock.py  test_cli_contract.py  test_cli_initconfig.py  test_cli_net.py  test_cli_reads.py  test_cli_service.py  test_cli_smoke.py  test_cli_ussd.py  test_cli_write.py  test_client_auth.py  test_client_reads.py  test_client_ussd.py  test_config.py  test_service.py  test_service_sh.py  test_ussd_store.py  test_web.py  test_web_ussd.py
zlt/: cli.py  client.py  config.py  service.py  ussd_store.py  web.py
zlt/static/: index.html
