[project]
name = "zlt"
version = "0.1.0"
description = "CLI for the MTN ZLT T10D MAX (ZTE NV8645) router"
requires-python = ">=3.11"
dependencies = ["click>=8.1", "requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "responses>=0.25"]

[project.scripts]
zlt = "zlt.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["zlt"]
