[project]
name = "zlt"
version = "0.4.0"
description = "CLI for the MTN ZLT T10D MAX (ZTE NV8645) router"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "requests>=2.31",
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "responses>=0.25", "httpx>=0.27"]

[project.scripts]
zlt = "zlt.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["zlt"]

[tool.setuptools.package-data]
zlt = ["static/*.html"]
